--- a/gallery/index_en.html
+++ b/gallery/index_en.html
@@ -346,7 +346,8 @@
         <div class="gallery" id="gallery"></div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_EN.md" class="back-link">← Back to
+            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_EN.md#-memes--illustrations"
+                class="back-link">← Back to
                 Main Menu</a>
         </div>
     </div>
