--- a/podcast/systemanalyse.html
+++ b/podcast/systemanalyse.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Der Zupftest - Villa Kunterbunt</title>
+    <title>Die Studie - Villa Kunterbunt</title>
     <meta name="description"
-        content="Episode 5: Der Zupftest. In dieser Podcast-Folge wird der Bericht „Villa Kunterbunt“ detailliert seziert, wobei insbesondere der sogenannte „Zupftest“ als fragwürdige Diagnosemethode im Fokus steht.">
+        content="Episode 6: Die Studie. Eine systemanalytische Untersuchung einer fehlerhaften Reparatur an einer defekten Stromphase (L3).">
     <!-- Google Fonts for premium typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -325,6 +325,7 @@
             clip: rect(0, 0, 0, 0);
             white-space: nowrap;
             border: 0;
+            clip-path: inset(50%);
         }
     </style>
 </head>
@@ -336,21 +337,17 @@
     <div class="main-container">
         <header>
             <div class="subtitle">Die Villa Kunterbunt</div>
-            <h1>Der Zupftest</h1>
+            <h1>Die Studie</h1>
         </header>
 
         <article class="episode-card">
             <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
                 alt="Cover Art" class="cover-art">
 
-            <div class="episode-tag">Episode 05</div>
+            <div class="episode-tag">Episode 06</div>
 
             <div class="episode-description">
-                In dieser Podcast-Folge wird der Bericht „Villa Kunterbunt“ detailliert seziert, wobei insbesondere der
-                sogenannte „Zupftest“ als fragwürdige Diagnosemethode der <strong>Bayernwerk</strong>-Techniker im Fokus
-                steht. Die Sprecher analysieren die Diskrepanz zwischen moderner PR und der realen infrastrukturellen
-                Schlamperei, die sich auch in extrem negativen Kundenbewertungen (ca. 90 % Ein-Stern-Bewertungen bei
-                <strong>Bayernwerk</strong>/<strong>E.ON</strong>) widerspiegelt.
+                In diesem Podcast-Beitrag wird die satirische Korrespondenz eines Kunden mit seinem Stromanbieter analysiert, der nach einer fehlerhaften Reparatur an einer defekten Stromphase (L3) eine systemanalytische Untersuchung einleitete. Der Fall verdeutlicht auf humorvolle Weise die bürokratischen Hürden im Kundenservice und zeigt, wie physikalische Grundgesetze und kreative Beschwerdestrategien genutzt werden können, um technische Inkompetenz zu entlarven.
             </div>
 
             <div class="player-controls">
@@ -369,18 +366,14 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Zupftest.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Systemanalyse.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="deepdive.html" class="nav-link prev-episode">
+                <a href="zupftest.html" class="nav-link prev-episode">
                     <span>Vorherige Episode</span>
                 </a>
                 <a href="index.html" class="nav-link centered-link highlight">
                     <span>Alle Episoden</span>
-                </a>
-                <a href="systemanalyse.html" class="nav-link next-episode highlight">
-                    <span>Nächste Episode: Die Studie</span>
                 </a>
             </div>
         </article>
