Fix: Highlight style for Previous Episode button in Episode 6

--- a/podcast/systemanalyse.html
+++ b/podcast/systemanalyse.html
@@ -347,7 +347,11 @@
             <div class="episode-tag">Episode 06</div>
 
             <div class="episode-description">
-                In diesem Podcast-Beitrag wird die satirische Korrespondenz eines Kunden mit seinem Stromanbieter analysiert, der nach einer fehlerhaften Reparatur an einer defekten Stromphase (L3) eine systemanalytische Untersuchung einleitete. Der Fall verdeutlicht auf humorvolle Weise die bürokratischen Hürden im Kundenservice und zeigt, wie physikalische Grundgesetze und kreative Beschwerdestrategien genutzt werden können, um technische Inkompetenz zu entlarven.
+                In diesem Podcast-Beitrag wird die satirische Korrespondenz eines Kunden mit seinem Stromanbieter
+                analysiert, der nach einer fehlerhaften Reparatur an einer defekten Stromphase (L3) eine
+                systemanalytische Untersuchung einleitete. Der Fall verdeutlicht auf humorvolle Weise die bürokratischen
+                Hürden im Kundenservice und zeigt, wie physikalische Grundgesetze und kreative Beschwerdestrategien
+                genutzt werden können, um technische Inkompetenz zu entlarven.
             </div>
 
             <div class="player-controls">
@@ -366,10 +370,11 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Systemanalyse.mp3" preload="metadata"></audio>
+            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Systemanalyse.mp3"
+                preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="zupftest.html" class="nav-link prev-episode">
+                <a href="zupftest.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode</span>
                 </a>
                 <a href="index.html" class="nav-link centered-link highlight">
