--- a/podcast/zupftest.html
+++ b/podcast/zupftest.html
@@ -373,11 +373,8 @@
                 preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="deepdive.html" class="nav-link prev-episode">
+                <a href="deepdive.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode</span>
-                </a>
-                <a href="index.html" class="nav-link centered-link highlight">
-                    <span>Alle Episoden</span>
                 </a>
                 <a href="systemanalyse.html" class="nav-link next-episode highlight">
                     <span>Nächste Episode: Die Studie</span>
