--- a/podcast/index.html
+++ b/podcast/index.html
@@ -589,7 +589,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-6" src="../assets/audio/Die Villa Kunterbunt - Systemanalyse.mp3"
+                    <audio id="audio-player-6" src="../assets/audio/Die Villa Kunterbunt – Die Studie.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
