--- a/podcast/systemanalyse.html
+++ b/podcast/systemanalyse.html
@@ -370,7 +370,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Systemanalyse.mp3"
+            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Die Studie.mp3"
                 preload="metadata"></audio>
 
             <div class="nav-links">
