--- a/upload-guide/index_de2.html
+++ b/upload-guide/index_de2.html
@@ -254,11 +254,16 @@
             <li>
                 <strong>Vorschlag absenden (Pull Request):</strong><br>
                 Klicken Sie am Ende auf <strong>"Create pull request"</strong>.
+                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Bildschirm-Foto: Pull Request erstellen"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
 
         <h2>4️⃣ Was passiert dann?</h2>
         <p>Wir prüfen Ihre Datei.</p>
+
+        <img src="../assets/images/guide/pr_success_cropped.png" alt="Bildschirm-Foto: Datei erfolgreich eingereicht"
+            style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Neu"</h3>
         <p><span class="status-badge status-new">📋 NEU</span> Die Datei heißt noch <code>NEW_...</code>. Wir haben sie
