--- a/upload-guide/index_en.html
+++ b/upload-guide/index_en.html
@@ -273,11 +273,16 @@
             <li>
                 <strong>Open Pull Request (PR):</strong><br>
                 Finally, click <strong>"Create pull request"</strong>.
+                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Creation"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
 
         <h2>4️⃣ Approval and Processing</h2>
         <p>After the file has been submitted, it will be reviewed by the project management:</p>
+
+        <img src="../assets/images/guide/pr_success_cropped.png" alt="Screenshot Successful Pull Request"
+            style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Received"</h3>
         <p><span class="status-badge status-new">📋 NEW</span> The file remains in the folder with the <code>NEW_</code>
