style(site): Add fork card container and improve alignment

--- a/site/index.html
+++ b/site/index.html
@@ -52,23 +52,27 @@
                     </a>
                 </div>
                 <!-- Fork Badges -->
-                <div class="hero-forks">
-                    <a href="https://github.com/derlemue/villa-kunterbunt" target="_blank">
-                        <img src="https://img.shields.io/badge/Fork-derlemue-3b82f6?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                            alt="Fork derlemue">
-                    </a>
-                    <a href="https://github.com/m3l1nda/villa-kunterbunt" target="_blank">
-                        <img src="https://img.shields.io/badge/Fork-m3l1nda-ef4444?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                            alt="Fork m3l1nda">
-                    </a>
-                    <a href="https://github.com/osint-inc/villa-kunterbunt" target="_blank">
-                        <img src="https://img.shields.io/badge/Fork-osint--inc-f59e0b?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                            alt="Fork osint-inc">
-                    </a>
-                    <a href="https://github.com/Cipher-Pup/villa-kunterbunt" target="_blank">
-                        <img src="https://img.shields.io/badge/Fork-Cipher--Pup-10b981?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                            alt="Fork Cipher-Pup">
-                    </a>
+                <!-- Fork Badges -->
+                <div class="fork-card">
+                    <span class="fork-card-label">Active Forks</span>
+                    <div class="hero-forks">
+                        <a href="https://github.com/derlemue/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/badge/Fork-derlemue-3b82f6?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="Fork derlemue">
+                        </a>
+                        <a href="https://github.com/m3l1nda/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/badge/Fork-m3l1nda-ef4444?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="Fork m3l1nda">
+                        </a>
+                        <a href="https://github.com/osint-inc/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/badge/Fork-osint--inc-f59e0b?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="Fork osint-inc">
+                        </a>
+                        <a href="https://github.com/Cipher-Pup/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/badge/Fork-Cipher--Pup-10b981?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="Fork Cipher-Pup">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image">
