feat(site): Use dynamic GHA status badges and update screenshot

--- a/site/index.html
+++ b/site/index.html
@@ -56,21 +56,21 @@
                 <div class="fork-card">
                     <span class="fork-card-label">Active Forks</span>
                     <div class="hero-forks">
-                        <a href="https://github.com/derlemue/villa-kunterbunt" target="_blank">
-                            <img src="https://img.shields.io/badge/Fork-derlemue-3b82f6?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                                alt="Fork derlemue">
+                        <a href="https://github.com/lemueIO/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/github/actions/workflow/status/lemueIO/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=lemueIO&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="lemueIO Status">
                         </a>
                         <a href="https://github.com/m3l1nda/villa-kunterbunt" target="_blank">
-                            <img src="https://img.shields.io/badge/Fork-m3l1nda-ef4444?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                                alt="Fork m3l1nda">
+                            <img src="https://img.shields.io/github/actions/workflow/status/m3l1nda/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=m3l1nda&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="m3l1nda Status">
                         </a>
                         <a href="https://github.com/osint-inc/villa-kunterbunt" target="_blank">
-                            <img src="https://img.shields.io/badge/Fork-osint--inc-f59e0b?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                                alt="Fork osint-inc">
+                            <img src="https://img.shields.io/github/actions/workflow/status/osint-inc/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=osint-inc&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="osint-inc Status">
                         </a>
                         <a href="https://github.com/Cipher-Pup/villa-kunterbunt" target="_blank">
-                            <img src="https://img.shields.io/badge/Fork-Cipher--Pup-10b981?style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                                alt="Fork Cipher-Pup">
+                            <img src="https://img.shields.io/github/actions/workflow/status/Cipher-Pup/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=Cipher-Pup&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="Cipher-Pup Status">
                         </a>
                     </div>
                 </div>
