chore: Final polish and changelog update

--- a/upload-guide/index_de2.html
+++ b/upload-guide/index_de2.html
@@ -241,6 +241,8 @@
                     <li>Dann auf <strong>"Upload files"</strong> (Dateien hochladen).</li>
                     <li>Ziehen Sie Ihre Datei mit dem <code>NEW_</code> Namen in das Feld.</li>
                 </ul>
+                <img src="../assets/images/guide/file_selection.png" alt="Bildschirm-Foto: Datei auswählen"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
                 <strong>Speichern (Commit):</strong>
