--- a/upload-guide/index_en.html
+++ b/upload-guide/index_en.html
@@ -259,6 +259,8 @@
                     <li>Drag the prepared file (with the <code>NEW_</code> prefix) into the upload field or select it
                         from your local computer.</li>
                 </ul>
+                <img src="../assets/images/guide/file_selection.png" alt="Screenshot File Selection"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
                 <strong>Create Commit:</strong>
