--- a/upload-guide/index.html
+++ b/upload-guide/index.html
@@ -262,6 +262,8 @@
                     <li>Ziehen Sie die vorbereitete Datei (mit dem Präfix <code>NEW_</code>) in das Upload-Feld oder
                         wählen Sie diese von Ihrem lokalen Computer aus.</li>
                 </ul>
+                <img src="../assets/images/guide/file_selection.png" alt="Screenshot Dateiauswahl"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
                 <strong>Commit erstellen:</strong>
@@ -276,14 +278,16 @@
             <li>
                 <strong>Pull Request (PR) eröffnen:</strong><br>
                 Klicken Sie abschließend auf <strong>"Create pull request"</strong>.
-                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Erstellung" style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
+                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Erstellung"
+                    style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
 
         <h2>4️⃣ Freigabe und Bearbeitung</h2>
         <p>Nachdem die Datei eingereicht wurde, erfolgt die Prüfung durch die Projektleitung:</p>
-        
-        <img src="../assets/images/guide/pr_success_cropped.png" alt="Screenshot Erfolgreicher Pull Request" style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
+
+        <img src="../assets/images/guide/pr_success_cropped.png" alt="Screenshot Erfolgreicher Pull Request"
+            style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Eingang"</h3>
         <p><span class="status-badge status-new">📋 NEU</span> Die Datei verbleibt im Ordner mit dem Präfix
