Refactor: Simplify directory structure to core/{main,cowork,meta,templates}

--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
                     <h3>Satire Podcast</h3>
                     <p>Die satirische Initiativbewerbung als Akt der subversiven Compliance. Das finale Kapitel zum
                         Hören.</p>
-                    <a href="data/project_core/01_Hauptprojekt/podcast/satire.html" class="btn btn-secondary">Jetzt hören →</a>
+                    <a href="core/main/podcast/satire.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🎧</div>
                     <h3>Analyse Podcast</h3>
                     <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell
                         aufbereitet.</p>
-                    <a href="data/project_core/01_Hauptprojekt/podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
+                    <a href="core/main/podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📊</div>
@@ -151,7 +151,7 @@
                     <div class="card-icon">🖼️</div>
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
-                    <a href="data/project_core/01_Hauptprojekt/gallery/index.html" class="btn btn-secondary">Zur Galerie
+                    <a href="core/main/gallery/index.html" class="btn btn-secondary">Zur Galerie
                         →</a>
                 </div>
                 <div class="card">
