Refactor: Move git meta files to core/git and update links

--- a/core/git/upload-guide/index_de2.html
+++ b/core/git/upload-guide/index_de2.html
@@ -241,7 +241,7 @@
                     <li>Dann auf <strong>"Upload files"</strong> (Dateien hochladen).</li>
                     <li>Ziehen Sie Ihre Datei mit dem <code>NEW_</code> Namen in das Feld.</li>
                 </ul>
-                <img src="../assets/images/guide/file_selection.png" alt="Bildschirm-Foto: Datei auswählen"
+                <img src="../../../assets/images/guide/file_selection.png" alt="Bildschirm-Foto: Datei auswählen"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
@@ -256,7 +256,7 @@
             <li>
                 <strong>Vorschlag absenden (Pull Request):</strong><br>
                 Klicken Sie am Ende auf <strong>"Create pull request"</strong>.
-                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Bildschirm-Foto: Pull Request erstellen"
+                <img src="../../../assets/images/guide/pr_creation_cropped.png" alt="Bildschirm-Foto: Pull Request erstellen"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
@@ -264,7 +264,7 @@
         <h2>4️⃣ Was passiert dann?</h2>
         <p>Wir prüfen Ihre Datei.</p>
 
-        <img src="../assets/images/guide/pr_success_cropped.png" alt="Bildschirm-Foto: Datei erfolgreich eingereicht"
+        <img src="../../../assets/images/guide/pr_success_cropped.png" alt="Bildschirm-Foto: Datei erfolgreich eingereicht"
             style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Neu"</h3>
