--- a/core/git/upload-guide/index_en.html
+++ b/core/git/upload-guide/index_en.html
@@ -259,7 +259,7 @@
                     <li>Drag the prepared file (with the <code>NEW_</code> prefix) into the upload field or select it
                         from your local computer.</li>
                 </ul>
-                <img src="../assets/images/guide/file_selection.png" alt="Screenshot File Selection"
+                <img src="../../../assets/images/guide/file_selection.png" alt="Screenshot File Selection"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
@@ -275,7 +275,7 @@
             <li>
                 <strong>Open Pull Request (PR):</strong><br>
                 Finally, click <strong>"Create pull request"</strong>.
-                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Creation"
+                <img src="../../../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Creation"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
@@ -283,7 +283,7 @@
         <h2>4️⃣ Approval and Processing</h2>
         <p>After the file has been submitted, it will be reviewed by the project management:</p>
 
-        <img src="../assets/images/guide/pr_success_cropped.png" alt="Screenshot Successful Pull Request"
+        <img src="../../../assets/images/guide/pr_success_cropped.png" alt="Screenshot Successful Pull Request"
             style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Received"</h3>
