--- a/core/git/upload-guide/index.html
+++ b/core/git/upload-guide/index.html
@@ -262,7 +262,7 @@
                     <li>Ziehen Sie die vorbereitete Datei (mit dem Präfix <code>NEW_</code>) in das Upload-Feld oder
                         wählen Sie diese von Ihrem lokalen Computer aus.</li>
                 </ul>
-                <img src="../assets/images/guide/file_selection.png" alt="Screenshot Dateiauswahl"
+                <img src="../../../assets/images/guide/file_selection.png" alt="Screenshot Dateiauswahl"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
             <li>
@@ -278,7 +278,7 @@
             <li>
                 <strong>Pull Request (PR) eröffnen:</strong><br>
                 Klicken Sie abschließend auf <strong>"Create pull request"</strong>.
-                <img src="../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Erstellung"
+                <img src="../../../assets/images/guide/pr_creation_cropped.png" alt="Screenshot Pull Request Erstellung"
                     style="width: 100%; border-radius: 8px; margin-top: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
             </li>
         </ol>
@@ -286,7 +286,7 @@
         <h2>4️⃣ Freigabe und Bearbeitung</h2>
         <p>Nachdem die Datei eingereicht wurde, erfolgt die Prüfung durch die Projektleitung:</p>
 
-        <img src="../assets/images/guide/pr_success_cropped.png" alt="Screenshot Erfolgreicher Pull Request"
+        <img src="../../../assets/images/guide/pr_success_cropped.png" alt="Screenshot Erfolgreicher Pull Request"
             style="width: 100%; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border: 1px solid #eee;">
 
         <h3>Status "Eingang"</h3>
