--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Die Villa Kunterbunt | Das Korrespondenz Epos</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="core/data/main/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <meta property="og:description"
         content="Eine satirische Odyssee durch die Welt der Phasenausfälle, des Remote-Voodoo und der Suche nach der verlorenen dritten Phase.">
     <meta property="og:image"
-        content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/assets/Die%20Villa%20Kunterbunt%20-%20open-graph-template.png">
+        content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/core/data/main/images/Die%20Villa%20Kunterbunt%20-%20open-graph-template.png">
     <meta name="twitter:card" content="summary_large_image">
 </head>
 
@@ -42,7 +42,7 @@
                     der verlorenen dritten Phase L3.
                 </p>
                 <div class="hero-buttons">
-                    <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                    <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
                         class="btn btn-primary" target="_blank">
                         📄 PDF lesen
                     </a>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="core/data/main/images/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20Cover%20Front_HQ_thumb.png"
                     alt="Villa Kunterbunt Cover">
             </div>
         </section>
@@ -113,21 +113,21 @@
                     <h3>Satire Podcast</h3>
                     <p>Die satirische Initiativbewerbung als Akt der subversiven Compliance. Das finale Kapitel zum
                         Hören.</p>
-                    <a href="core/main/podcast/satire.html" class="btn btn-secondary">Jetzt hören →</a>
+                    <a href="core/data/main/podcast/satire.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🎧</div>
                     <h3>Analyse Podcast</h3>
                     <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell
                         aufbereitet.</p>
-                    <a href="core/main/podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
+                    <a href="core/data/main/podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📊</div>
                     <h3>Systemanalytische Studie</h3>
                     <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des
                         Widerstands.</p>
-                    <a href="assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
+                    <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
                         class="btn btn-secondary">PDF öffnen →</a>
                 </div>
             </div>
@@ -141,9 +141,9 @@
                     <h3>Das Ebook</h3>
                     <p>Die vollständige Korrespondenz als hochwertiges PDF oder ePub.</p>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                        <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                        <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
                             class="btn btn-secondary">PDF</a>
-                        <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub"
+                        <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub"
                             class="btn btn-secondary">ePub</a>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <div class="card-icon">🖼️</div>
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
-                    <a href="core/main/gallery/index.html" class="btn btn-secondary">Zur Galerie
+                    <a href="core/data/main/gallery/index.html" class="btn btn-secondary">Zur Galerie
                         →</a>
                 </div>
                 <div class="card">
