Refactoring: Move CSS to core/website and fix broken asset links

--- a/core/data/main/gallery/index.html
+++ b/core/data/main/gallery/index.html
@@ -415,7 +415,7 @@
         let currentIndex = 0;
         let isPlaying = false;
         let autoplayInterval = null;
-        const basePath = '../assets/illustrations/';
+        const basePath = '../illustrations/';
         const selectedImages = new Set();
 
         // DOM Elements
