--- a/core/data/main/gallery/index_en.html
+++ b/core/data/main/gallery/index_en.html
@@ -416,7 +416,7 @@
         let currentIndex = 0;
         let isPlaying = false;
         let autoplayInterval = null;
-        const basePath = '../assets/illustrations/';
+        const basePath = '../illustrations/';
         const selectedImages = new Set();
 
         // DOM Elements
