--- a/core/data/main/podcast/satire.html
+++ b/core/data/main/podcast/satire.html
@@ -46,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
+            background-image: url('../images/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20Cover%20Front_HQ_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -340,7 +340,7 @@
         </header>
 
         <article class="episode-card">
-            <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+            <img src="../images/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20Cover%20Front_HQ_thumb.png"
                 alt="Cover Art" class="cover-art">
 
             <div class="episode-tag">Episode 01</div>
@@ -369,7 +369,8 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3" preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/Die%20Villa%20Kunterbunt%20–%20Satire.mp3"
+                preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="index.html" class="nav-link centered-link highlight">
